# fecpp

./: .gitignore  CMakeLists.txt  notes.txt
src/: CMakeLists.txt  fecpp.h  fecpp_python.cpp
test/: CMakeLists.txt  test_fec.cpp
